--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -4,7 +4,7 @@
     justify-content: space-between; /* Spaces out content */
     align-items: center;
     padding: 0 5%; /* Adjust spacing from sides */
-    color: white;
+    color: #f54f0e;
     overflow: hidden;
   }
   
@@ -29,7 +29,7 @@
   .hero-subtitle {
     font-size: 1.5rem;
     margin-top: 10px;
-    color: rgba(255, 255, 255, 0.7);
+    color: rgb(245, 79, 14);
     animation: fadeInUp 2s ease-in-out;
     display: flex;
     flex-direction: column;
