--- a/src/styles/VideoBackground.css
+++ b/src/styles/VideoBackground.css
@@ -1,12 +1,12 @@
 .video-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1; /* Ensure it's behind all elements */
-    overflow: hidden;
-  }
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow: hidden;
+}
   
   .video-bg {
     width: 100vw;
